--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,6 +1,10 @@
 // Font
-$font: 'GT Eesti Pro Display', sans-serif;
+$font: 'Roboto', sans-serif;
+$font2: 'Montserrat', sans-serif;
 
 // Colors
 $white: #fff;
 $blue: #0053D9;
+$gray: #434343;
+$lightGray: #fafafa;
+$black: #262626;
