--- a/components/shared/Breadcrumbs/Breadcrumbs.module.scss
+++ b/components/shared/Breadcrumbs/Breadcrumbs.module.scss
@@ -1,3 +1,34 @@
-.container {
-    
+@import 'styles/vars';
+@import 'styles/mixins';
+
+.links {
+    display: flex;
+    flex-direction: row;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: $black;
+    a {
+        color: $black;
+        text-decoration: none;
+        margin-right: 22px;
+        transition: color 0.2s ease;
+        position: relative;
+        &:after {
+            display: block;
+            height: 12px;
+            width: 7px;
+            background-image: url('data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%207%2012%22%3E%3Cpath%20fill%3D%22%23262626%22%20d%3D%22M7%206c0%20.2-.1.4-.3.6l-5.2%205.1c-.3.3-.9.3-1.2%200-.3-.3-.3-.9%200-1.2L4.9%206%20.3%201.5C0%201.2%200%20.6.3.3c.3-.3.9-.3%201.2%200l5.2%205.1c.2.2.3.4.3.6z%22%2F%3E%3C%2Fsvg%3E');
+            background-size: 7px 12px;
+            background-position: center;
+            background-repeat: no-repeat;
+            content: '';
+            position: absolute;
+            top: 6px;
+            right: -15px;
+        }
+        &:hover {
+            color: $blue;
+        }
+    }
 }
