--- a/components/shared/Gallery/Gallery.module.scss
+++ b/components/shared/Gallery/Gallery.module.scss
@@ -34,6 +34,7 @@
     display: flex;
     width: 100%;
     font-weight: 500;
+    font-family: $font;
     font-size: 14px;
     line-height: 21px;
     color: $white;
