--- a/components/shared/PageHeading/PageHeading.module.scss
+++ b/components/shared/PageHeading/PageHeading.module.scss
@@ -80,6 +80,7 @@
         height: 32px;
         background-color: transparent;
         font-weight: 500;
+        font-family: $font;
         font-size: 16px;
         line-height: 24px;
         color: $black;
