--- a/components/layout/Footer/Footer.module.scss
+++ b/components/layout/Footer/Footer.module.scss
@@ -12,6 +12,12 @@
 }
 .nav__item {
     width: 245px;
+    margin-top: 15px;
+    &:nth-child(1),
+    &:nth-child(2),
+    &:nth-child(3) {
+        margin-top: 0;
+    }
     &:not(:nth-child(3n)) {
         margin-right: 138px;
     }
@@ -30,5 +36,112 @@
     }
 }
 .nav__item__links {
-    
+    margin-top: 25px;
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+    li {
+        &:not(:nth-child(1)) {
+            margin-top: 8px;
+        }
+    }
+    a {
+        font-family: $font;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        color: $black;
+        transition: color 0.2s ease;
+        &:hover {
+            color: $blue;
+        }
+    }
+}
+.bottom {
+    display: flex;
+    align-items: center;
+    padding: 60px 0;
+    margin-top: 55px;
+    border-top: 1px solid #D9D9D9;
+    box-sizing: border-box;
+}
+.bottom__copyright {
+    font-family: $font;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: #1F1F1F;
+}
+.bottom__lang {
+    margin-left: auto;
+    margin-right: 48px;
+    button {
+        display: flex;
+        background-color: transparent;
+        cursor: pointer;
+        align-items: center;
+        flex-direction: row;
+        outline: none;
+        border: none;
+        &:hover {
+            svg {
+                fill: $blue;
+            }
+            span {
+                color: $blue;
+                border-color: $blue;
+            }
+        }
+        svg {
+            display: block;
+            height: auto;
+            width: 20px;
+            fill: $gray;
+            margin-right: 10px;
+            transition: fill 0.2s ease;
+        }
+        span {
+            display: block;
+            font-family: $font;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 21px;
+            color: $gray;
+            border-bottom: 1px solid $gray;
+            transition: color 0.2s ease, border-color 0.2s ease;
+        }
+    }
+}
+.bottom__social {
+    ul {
+        display: flex;
+        list-style: none;
+        flex-wrap: wrap;
+        padding: 0;
+        margin: 0;
+    }
+    li {
+        &:not(:last-child) {
+            margin-right: 16px;
+        }
+    }
+    a {
+        display: flex;
+        width: 24px;
+        align-items: center;
+        &:hover {
+            svg {
+                fill: $blue;
+            }
+        }
+        svg {
+            display: block;
+            height: auto;
+            width: 100%; 
+            fill: $gray;
+            transition: fill 0.2s ease;
+        }
+    }
 }
