--- a/components/pages/tour/Recommendations/Recommendations.module.scss
+++ b/components/pages/tour/Recommendations/Recommendations.module.scss
@@ -38,6 +38,12 @@
 .content__cards {
     margin-top: 25px;
     position: relative;
+    &:hover {
+        .sliderPrev,
+        .sliderNext {
+            opacity: 1;
+        }
+    }
     &:before {
         display: block;
         height: 100%;
@@ -56,6 +62,7 @@
         width: 1500px;
         background-color: $lightGray;
         content: '';
+        margin-left: 12px;
         position: absolute;
         top: 0;
         left: 100%;
@@ -64,5 +71,50 @@
     :global(.swiper-container) {
         padding: 20px 0;
         overflow: visible;
+    }
+}
+.sliderPrev,
+.sliderNext {
+    display: flex;
+    height: 40px;
+    width: 40px;
+    background-color: $black;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    margin: auto;
+    outline: none;
+    border: none;
+    border-radius: 50%;
+    transition: background-color 0.2s ease, opacity 0.2s ease;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    z-index: 7;
+    &:hover {
+        background-color: $blue;
+        svg {
+            fill: $white;
+        }
+    }
+    svg {
+        display: block;
+        height: auto;
+        width: 8px;
+        fill: $white;
+        transition: fill 0.2s ease;
+    }
+}
+.sliderPrev {
+    left: -60px;
+    svg {
+        margin-right: 2px;
+    }
+}
+.sliderNext {
+    right: -60px;
+    svg {
+        margin-left: 2px;
     }
 }
