--- a/components/shared/TourCard/TourCard.module.scss
+++ b/components/shared/TourCard/TourCard.module.scss
@@ -6,6 +6,13 @@
     overflow: hidden;
     box-shadow: 0px 2px 10px rgba(31, 31, 31, 0.15);
     border-radius: 8px;
+    &:hover {
+        .heading__image {
+            a {
+                transform: scale(1.1);
+            }
+        }
+    }
 }
 .heading {
     height: 224px;
@@ -17,6 +24,8 @@
         width: 100%;
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.52) 20.24%, rgba(0, 0, 0, 0) 100%);
         content: '';
+        pointer-events: none;
+        transition: height 0.2s ease;
         position: absolute;
         left: 0;
         bottom: 0;
@@ -26,6 +35,7 @@
 .heading__image {
     height: 224px;
     width: 100%;
+    overflow: hidden;
     position: relative;
     a {
         height: 100%;
@@ -33,20 +43,25 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
+        transition: transform 0.2s ease;
         position: absolute;
         top: 0;
         left: 0;
     }
 }
 .tag {
+    display: inline-flex;
+    height: 32px;
     background-color: #D4302A;
     font-family: $font;
     font-weight: 500;
     font-size: 16px;
-    line-height: 32px;
+    line-height: 16px;
     color: $white;
+    align-items: center;
     text-transform: uppercase;
     padding: 0 24px;
+    pointer-events: none;
     border-radius: 18px;
     position: absolute;
     top: 16px;
@@ -86,6 +101,7 @@
     line-height: 18px;
     color: $white;
     align-items: center;
+    pointer-events: none;
     position: absolute;
     left: 28px;
     bottom: 24px;
