fix some issues

--- a/components/shared/PageHeading/PageHeading.module.scss
+++ b/components/shared/PageHeading/PageHeading.module.scss
@@ -17,6 +17,8 @@
     button {
         display: flex;
         background-color: transparent;
+        font-family: $font;
+        font-weight: 400;
         font-size: 16px;
         line-height: 24px;
         cursor: pointer;
