--- a/components/shared/Breadcrumbs/Breadcrumbs.module.scss
+++ b/components/shared/Breadcrumbs/Breadcrumbs.module.scss
@@ -3,11 +3,12 @@
 
 .links {
     display: flex;
-    flex-direction: row;
+    font-family: $font;
     font-weight: 400;
     font-size: 16px;
     line-height: 24px;
     color: $black;
+    flex-direction: row;
     a {
         color: $black;
         text-decoration: none;
